added shift-arrow for navigtion between windows

--- a/tmux.conf
+++ b/tmux.conf
@@ -11,6 +11,10 @@ bind C-Space send-prefix
 bind -n M-H previous-window
 bind -n M-L next-window
 
+# Shift arrow to switch windows
+bind -n S-Left  previous-window
+bind -n S-Right next-window
+
 #renumber-windows starting from 1
 set -g base-index 1
 set -g pane-base-index 1
