--- a/tmux.conf
+++ b/tmux.conf
@@ -32,10 +32,28 @@ bind-key  -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+#setting tmux-pomodoro-plus to show on the status bar
+# set -g status-right "#{pomodoro_status}"
+set -g @catppuccin_pomo "#{pomodoro_status}"
+set -g @pomodoro_on "#[fg=$text_red]🍅 "
+set -g @pomodoro_complete "#[fg=$text_green]🍅 "
+
+#setting tmux-pomodoro-plus to run as a granular timer  
+set -g @pomodoro_granularity 'on'
+set -g status-interval 1                    # Refresh the status line every second
+
+# date and time in status bar
+set -g @catppuccin_date_time "%Y-%m-%d %H:%M"
+
+#set better seperators 
+set -g @catppuccin_left_separator "█"
+set -g @catppuccin_right_separator "█"
+
 #tmux-plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'olimorris/tmux-pomodoro-plus'
 run '~/.tmux/plugins/tpm/tpm'
