added sound and notifications , turned on auto repeat

--- a/tmux.conf
+++ b/tmux.conf
@@ -36,7 +36,11 @@ bind % split-window -h -c "#{pane_current_path}"
 # set -g status-right "#{pomodoro_status}"
 set -g @catppuccin_pomo "#{pomodoro_status}"
 set -g @pomodoro_on "#[fg=$text_red]🍅 "
-set -g @pomodoro_complete "#[fg=$text_green]🍅 "
+set -g @pomodoro_complete "#[fg=$text_green]✅ "
+set -g @pomodoro_auto_restart true               # Auto-repeat the pomodoro? False by default
+
+set -g @pomodoro_notifications 'on'        # Enable desktop notifications from your terminal
+set -g @pomodoro_sound 'on'   
 
 #setting tmux-pomodoro-plus to run as a granular timer  
 set -g @pomodoro_granularity 'on'
