--- a/tmux.conf
+++ b/tmux.conf
@@ -2,6 +2,9 @@
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
+#move status bar to the top
+set-option -g status-position top
+
 #change prefix key 
 unbind C-b
 set -g prefix C-Space
