--- a/tmux.conf
+++ b/tmux.conf
@@ -34,6 +34,7 @@ bind-key  -T copy-mode-vi y send-keys -X copy-selection-and-cancel
 # open new panes in the same directory
 bind '"' split-window -v -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+bind c new-window -c "#{pane_current_path}"
 
 #setting tmux-pomodoro-plus to show on the status bar
 # set -g status-right "#{pomodoro_status}"
